--- a/Uclearner/templates/login.html
+++ b/Uclearner/templates/login.html
@@ -20,7 +20,7 @@
 
 <form action="{{ url_for('login') }}" class="w3-container w3-card-4 w3-light-grey w3-text-blue w3-margin" method="post">
     <h2 class="w3-center">Welcome back!</h2>
-    
+    <h2>{{error}}</h2>
     <div class="w3-row w3-section">
         <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-envelope-o"></i></div>
         <div class="w3-rest">
