--- a/Uclearner/templates/checkout.html
+++ b/Uclearner/templates/checkout.html
@@ -106,7 +106,7 @@
                     </div>
                     </div>
                                                                 <p>
-                                                                <button type="submit" class="w3-btn w3-light-grey">Register</button></p>
+                                                                <button type="submit" class="w3-btn w3-light-grey">Checkout</button></p>
                                                                 
                 </form>
                 
