--- a/Uclearner/templates/signup.html
+++ b/Uclearner/templates/signup.html
@@ -9,7 +9,16 @@
                         .mySlides {display: none}
                         </style>
                     
-
+                    <div class="w3-top">
+                            <ul class="w3-navbar w3-black w3-card-2 w3-left-align">
+                                <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
+                                    <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+                                </li>
+                                <li><a href="/" class="w3-hover-none w3-hover-text-grey w3-padding-large">HOME</a></li>
+                                <li class="w3-hide-small"><a href="{{url_for("about")}}" class="w3-padding-large">About</a></li>
+                            </ul>
+                        </div>
+<br><br>
 <div class="w3-container w3-black">
     <h1>Sign up</h1>
 </div>
