checkout and order route

--- a/Uclearner/templates/checkout.html
+++ b/Uclearner/templates/checkout.html
@@ -73,7 +73,7 @@
                     <h3>Order info</h3>
                 </div>
                 
-                <form  class="w3-container w3-blue" action="{{ url_for('about') }}" method="post" name="personal">
+                <form  class="w3-container w3-blue" action="{{ url_for('show_user_profile') }}" method="post" name="personal">
                     
                     
                     <label class="w3-label w3-large w3-text-white"><b>Total Amount</b></label>
