--- a/Uclearner/templates/laundromat.html
+++ b/Uclearner/templates/laundromat.html
@@ -58,7 +58,7 @@
         <div id="purhcaseForm">
         
   
-           <form id="purchase", method="POST", action="/checkout">
+           <form id="purchase", method="POST", action="/order">
 
             {% for n in priceList %}
 
