--- a/Uclearner/templates/checkout.html
+++ b/Uclearner/templates/checkout.html
@@ -77,20 +77,20 @@
                     
                     
                     <label class="w3-label w3-large w3-text-white"><b>Total Amount</b></label>
-                    <input class="w3-input w3-border" type="text" name="amount">
+                    <input class="w3-input w3-border" type="text" name="amount" value={{order_total}}>
                     
                     <label class="w3-label w3-large w3-text-white"><b>Pick up Address Line1</b></label>
-                    <input class="w3-input w3-border" id="address-line1" name="address-line1" type="text" placeholder="address line 1">
+                    <input class="w3-input w3-border" id="address-line1" name="address-line1" type="text" placeholder="address line 1" value={{my_list[0]}}>
                      <label class="w3-label w3-large w3-text-white"><b>Pick up Address Line2</b></label>
-                     <input class="w3-input w3-border" id="address-line2" name="address-line2" type="text" placeholder="address line 2">
+                     <input class="w3-input w3-border" id="address-line2" name="address-line2" type="text" placeholder="address line 2" value={{my_list[1]}}>
                                                     
                      <label class="w3-label w3-large w3-text-white"><b>City</b></label>
-                     <input class="w3-input w3-border" id="city" name="city" type="text" placeholder="city">
+                     <input class="w3-input w3-border" id="city" name="city" type="text" placeholder="city" value={{my_list[2]}}>
                      <label class="w3-label w3-large w3-text-white"><b>State</b></label>
-                     <input class="w3-input w3-border" id="region" name="region" type="text" placeholder="state/province/ region">
+                     <input class="w3-input w3-border" id="region" name="region" type="text" placeholder="state/province/region" value={{my_list[3]}}>
                                                             
                     <label class="w3-label w3-large w3-text-white"><b>Zip code</b></label>
-                    <input class="w3-input w3-border" id="postal-code" name="postal-code" type="text" placeholder="zip or postal code">
+                    <input class="w3-input w3-border" id="postal-code" name="postal-code" type="text" placeholder="zip or postal code" value={{my_list[4]}}>
     
                     
                     <label class="w3-label w3-large w3-text-white"><b>Time to pick up</b></label>
@@ -121,7 +121,6 @@
                     </select>
                     </div>
                     </div>
-
                      <p>
                      <button type="submit" class="w3-btn w3-light-grey w3-hover">Check out</button></p>
                                                                 
@@ -158,11 +157,11 @@
             <div class="card-wrapper"></div>
             
             <div class="form-container active">
-               
-                    <input placeholder="Card number" type="text" name="number">
-                        <input placeholder="Full name" type="text" name="name">
-                            <input placeholder="MM/YY" type="text" name="expiry">
-                                <input placeholder="CVC" type="text" name="cvc">
+                
+                
+                    <input placeholder="Card number" type="text" name="number" value={{my_list[5]}}>
+                        <input placeholder="Full name" type="text" name="name" value={{my_list[6]}} {{my_list[7]}}>
+                                <input placeholder="CVC" type="text" name="cvc" value={{my_list[8]}}>
                                  
             </div>
         </div>
