--- a/Uclearner/templates/checkout.html
+++ b/Uclearner/templates/checkout.html
@@ -160,7 +160,8 @@
                 
                 
                     <input placeholder="Card number" type="text" name="number" value={{my_list[5]}}>
-                        <input placeholder="Full name" type="text" name="name" value={{my_list[6]}} {{my_list[7]}}>
+                        <input placeholder="First name" type="text" name="fname" value={{my_list[6]}}>
+                            <input placeholder="Last name" type="text" name="lname" value={{my_list[7]}}>
                                 <input placeholder="CVC" type="text" name="cvc" value={{my_list[8]}}>
                                  
             </div>
