--- a/Uclearner/templates/userprofile.html
+++ b/Uclearner/templates/userprofile.html
@@ -44,7 +44,7 @@
                     <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>{{my_list[0][4]}} {{my_list[0][5]}} {{my_list[0][6]}} {{my_list[0][7]}} {{my_list[0][8]}} </p>
              
                     <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>{{my_list[0][2]}}</p>
-                    <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>{my_list[0][3]}}</p>
+                    <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>{{my_list[0][3]}}</p>
                     <hr>
                     </form>
             
